5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1674_1101.log
== TEST (2019-04-28 12:08:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
x1 = input("Digite a instalacao: ").upper()
if (x1 == "R"):
	if(x>500):
		x3= x*0.65
		print("Entradas: ",x, "kWh e tipo ",x1)
		print("Valor total: ",x3)
	elif(x<=500):
		x3 = x*0.44
		print("Entradas: ",x, "kWh e tipo ",x1)
		print("Valor total: ",x3)
elif(x1 == "C"):
	if(x>1000):
		x3 = x*0.6
		print("Entradas: ",x, "kWh e tipo ",x1)
		print("Valor total: ",x3)
	elif(x<=1000):
		x3 = x*0.55
		print("Entradas: ",x, "kWh e tipo ",x1)
		print("Valor total: ",x3)
elif(x1 == "I"):
	if(x>5000):
		x3 = x*0.6
		print("Entradas: ",x, "kWh e tipo ",x1)
		print("Valor total: ",x3)
	elif(x<=5000):
		x3 = x*0.55
		print("Entradas: ",x, "kWh e tipo ",x1)
		print("Valor total: ",x3)
else:
	print("Entradas: ",x, "kWh e tipo ",x1)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0 kWh e tipo  I
Valor total:  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 12:08:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
x1 = input("Digite a instalacao: ").upper()
if (x1 == "R"):
	if(x>500):
		x3= x*0.65
		print("Entradas: ",x, "kWh e tipo ",x1)
		print("Valor total: ",x3)
	elif(x<=500):
		x3 = x*0.44
		print("Entradas: ",x, "kWh e tipo ",x1)
		print("Valor total: ",x3)
elif(x1 == "C"):
	if(x>1000):
		x3 = x*0.6
		print("Entradas: ",x, "kWh e tipo ",x1)
		print("Valor total: ",x3)
	elif(x<=1000):
		x3 = x*0.55
		print("Entradas: ",x, "kWh e tipo ",x1)
		print("Valor total: ",x3)
elif(x1 == "I"):
	if(x>5000):
		x3 = x*0.6
		print("Entradas: ",x, "kWh e tipo ",x1)
		print("Valor total: ",x3)
	elif(x<=5000):
		x3 = x*0.55
		print("Entradas: ",x, "kWh e tipo ",x1)
		print("Valor total: ",x3)
else:
	print("Entradas: ",x, "kWh e tipo ",x1)
	print("Dados invalidos")
-- EXECUTION TIME:
0.146424
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo  I
Valor total:  -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo  R
Valor total:  621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:08:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
x1 = input("Digite a instalacao: ").upper()
if (x1 == "R"):
	if(x>500):
		x3= x*0.65
		print("Entradas: ",x, "kWh e tipo ",x1)
		print("Valor total: ",x3)
	elif(x<=500):
		x3 = x*0.44
		print("Entradas: ",x, "kWh e tipo ",x1)
		print("Valor total: ",x3)
elif(x1 == "C"):
	if(x>1000):
		x3 = x*0.6
		print("Entradas: ",x, "kWh e tipo ",x1)
		print("Valor total: ",x3)
	elif(x<=1000):
		x3 = x*0.55
		print("Entradas: ",x, "kWh e tipo ",x1)
		print("Valor total: ",x3)
elif(x1 == "I"):
	if(x>5000):
		x3 = x*0.6
		print("Entradas: ",x, "kWh e tipo ",x1)
		print("Valor total: ",x3)
	elif(x<=5000):
		x3 = x*0.55
		print("Entradas: ",x, "kWh e tipo ",x1)
		print("Valor total: ",x3)
else:
	print("Entradas: ",x, "kWh e tipo ",x1)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0 kWh e tipo  I
Valor total:  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:11:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
y = input("Digite a instalacao: ").upper()
if (y == "R"):
	if(x>500):
		z= x*0.65
		print("Entradas: ",x, "kWh e tipo ",y)
		print("Valor total: ",z)
	elif(x<=500):
		z = x*0.44
		print("Entradas: ",x, "kWh e tipo ",y)
		print("Valor total: ",z)
elif(y == "C"):
	if(x>1000):
		z = x*0.6
		print("Entradas: ",x, "kWh e tipo ",y)
		print("Valor total: ",z)
	elif(x<=1000):
		z = x*0.55
		print("Entradas: ",x, "kWh e tipo ",y)
		print("Valor total: ",z)
elif(y == "I"):
	if(x>5000):
		z = x*0.6
		print("Entradas: ",x, "kWh e tipo ",y)
		print("Valor total: ",z)
	elif(x<=5000):
		z = x*0.55
		print("Entradas: ",x, "kWh e tipo ",y)
		print("Valor total: ",z)
else:
	print("Entradas: ",x, "kWh e tipo ",y)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0 kWh e tipo  I
Valor total:  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 12:11:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
y = input("Digite a instalacao: ").upper()
if (y == "R"):
	if(x>500):
		z= x*0.65
		print("Entradas: ",x, "kWh e tipo ",y)
		print("Valor total: ",z)
	elif(x<=500):
		z = x*0.44
		print("Entradas: ",x, "kWh e tipo ",y)
		print("Valor total: ",z)
elif(y == "C"):
	if(x>1000):
		z = x*0.6
		print("Entradas: ",x, "kWh e tipo ",y)
		print("Valor total: ",z)
	elif(x<=1000):
		z = x*0.55
		print("Entradas: ",x, "kWh e tipo ",y)
		print("Valor total: ",z)
elif(y == "I"):
	if(x>5000):
		z = x*0.6
		print("Entradas: ",x, "kWh e tipo ",y)
		print("Valor total: ",z)
	elif(x<=5000):
		z = x*0.55
		print("Entradas: ",x, "kWh e tipo ",y)
		print("Valor total: ",z)
else:
	print("Entradas: ",x, "kWh e tipo ",y)
	print("Dados invalidos")
-- EXECUTION TIME:
0.160006
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo  I
Valor total:  -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo  R
Valor total:  621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:12:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
y = input("Digite a instalacao: ").upper()
print("Entradas: ",x, "kWh e tipo ",y)
if (y == "R"):
	if(x>500):
		z= x*0.65
		print("Valor total: ",z)
	elif(x<=500):
		z = x*0.44
		print("Valor total: ",z)
elif(y == "C"):
	if(x>1000):
		z = x*0.6
		print("Valor total: ",z)
	elif(x<=1000):
		z = x*0.55
		print("Valor total: ",z)
elif(y == "I"):
	if(x>5000):
		z = x*0.6
		print("Valor total: ",z)
	elif(x<=5000):
		z = x*0.55
		
		print("Valor total: ",z)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0 kWh e tipo  I
Valor total:  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 12:12:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
y = input("Digite a instalacao: ").upper()
print("Entradas: ",x, "kWh e tipo ",y)
if (y == "R"):
	if(x>500):
		z= x*0.65
		print("Valor total: ",z)
	elif(x<=500):
		z = x*0.44
		print("Valor total: ",z)
elif(y == "C"):
	if(x>1000):
		z = x*0.6
		print("Valor total: ",z)
	elif(x<=1000):
		z = x*0.55
		print("Valor total: ",z)
elif(y == "I"):
	if(x>5000):
		z = x*0.6
		print("Valor total: ",z)
	elif(x<=5000):
		z = x*0.55
		
		print("Valor total: ",z)
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.1831
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo  I
Valor total:  -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo  R
Valor total:  621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:13:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
y = input("Digite a instalacao: ").upper()
print("Entradas: ",x, "kWh e tipo ",y)
if (y == "R"):
	if(x>500):
		z= x*0.65
		print("Valor total: ",z)
	elif(x<=500):
		z = x*0.44
		print("Valor total: ",z)
elif(y == "C"):
	if(x>1000):
		z = x*0.6
		print("Valor total: ",z)
	elif(x<=1000):
		z = x*0.55
		print("Valor total: ",z)
elif(y == "I"):
	if(x>5000):
		z = x*0.6
		print("Valor total: ",z)
	elif(x<=5000):
		z = x*0.55
		
		print("Valor total: ",z)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0 kWh e tipo  I
Valor total:  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:14:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
y = input("Digite a instalacao: ").upper()
print("Entradas: ",x, "kWh e tipo ",y)
if (y == "R"):
	if(x<=500):
		z = x*0.44
		print("Valor total: ",z)
	elif(x>500):
		z= x*0.65
		print("Valor total: ",z)
elif(y == "C"):
	if(x<=1000):
		z = x*0.55
		print("Valor total: ",z)
	elif(x>1000):
		z = x*0.6
		print("Valor total: ",z)
elif(y == "I"):
	if(x<=5000):
		z = x*0.55
		print("Valor total: ",z)
	elif(x>5000):
		z = x*0.6
		print("Valor total: ",z)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0 kWh e tipo  I
Valor total:  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:14:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
y = input("Digite a instalacao: ").upper()
print("Entradas: ",x, "kWh e tipo ",y)
if (y == "R"):
	if(x<=500):
		z = x*0.44
		print("Valor total: ",z)
	elif(x>500):
		z= x*0.65
		print("Valor total: ",z)
elif(y == "C"):
	if(x<=1000):
		z = x*0.55
		print("Valor total: ",z)
	elif(x>1000):
		z = x*0.6
		print("Valor total: ",z)
elif(y == "I"):
	if(x<=5000):
		z = x*0.55
		print("Valor total: ",z)
	elif(x>5000):
		z = x*0.6
		print("Valor total: ",z)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0 kWh e tipo  I
Valor total:  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:15:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
y = input("Digite a instalacao: ").upper()
print("Entradas: ",x, "kWh e tipo ",y)
if (y == "R"):
	if(x<=500):
		z = x*0.44
		print("Valor total: ",z)
	elif(x>500):
		z= x*0.65
		print("Valor total: ",z)
elif(y == "C"):
	if(x<=1000):
		z = x*0.55
		print("Valor total: ",z)
	elif(x>1000):
		z = x*0.6
		print("Valor total: ",z)
elif(y == "I"):
	if(x<=5000):
		z = x*0.55
		print("Valor total: ",z)
	elif(x>5000):
		z = x*0.6
		print("Valor total: ",z)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0 kWh e tipo  I
Valor total:  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 12:15:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
y = input("Digite a instalacao: ").upper()
print("Entradas: ",x, "kWh e tipo ",y)
if (y == "R"):
	if(x<=500):
		z = x*0.44
		print("Valor total: ",z)
	elif(x>500):
		z= x*0.65
		print("Valor total: ",z)
elif(y == "C"):
	if(x<=1000):
		z = x*0.55
		print("Valor total: ",z)
	elif(x>1000):
		z = x*0.6
		print("Valor total: ",z)
elif(y == "I"):
	if(x<=5000):
		z = x*0.55
		print("Valor total: ",z)
	elif(x>5000):
		z = x*0.6
		print("Valor total: ",z)
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.149491
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo  I
Valor total:  -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo  R
Valor total:  621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:18:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
y = input("Digite a instalacao: ").upper()
print("Entradas: ",x, "kWh e tipo",y)
if (y == "R"):
	if(x<=500):
		z = x*0.44
		print("Valor total: ",z)
	elif(x>500):
		z= x*0.65
		print("Valor total: ",z)
elif(y == "C"):
	if(x<=1000):
		z = x*0.55
		print("Valor total: ",z)
	elif(x>1000):
		z = x*0.6
		print("Valor total: ",z)
elif(y == "I"):
	if(x<=5000):
		z = x*0.55
		print("Valor total: ",z)
	elif(x>5000):
		z = x*0.6
		print("Valor total: ",z)
else::
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 28
    else::
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:18:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
y = input("Digite a instalacao: ").upper()
print("Entradas: ",x, "kWh e tipo",y)
if (y == "R"):
	if(x<=500):
		z = x*0.44
		print("Valor total: ",z)
	elif(x>500):
		z= x*0.65
		print("Valor total: ",z)
elif(y == "C"):
	if(x<=1000):
		z = x*0.55
		print("Valor total: ",z)
	elif(x>1000):
		z = x*0.6
		print("Valor total: ",z)
elif(y == "I"):
	if(x<=5000):
		z = x*0.55
		print("Valor total: ",z)
	elif(x>5000):
		z = x*0.6
		print("Valor total: ",z)
else::
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 28
    else::
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:18:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
y = input("Digite a instalacao: ").upper()
print("Entradas: ",x, "kWh e tipo",y)
if (y == "R"):
	if(x<=500):
		z = x*0.44
		print("Valor total: ",z)
	elif(x>500):
		z= x*0.65
		print("Valor total: ",z)
elif(y == "C"):
	if(x<=1000):
		z = x*0.55
		print("Valor total: ",z)
	elif(x>1000):
		z = x*0.6
		print("Valor total: ",z)
elif(y == "I"):
	if(x<=5000):
		z = x*0.55
		print("Valor total: ",z)
	elif(x>5000):
		z = x*0.6
		print("Valor total: ",z)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Valor total:  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 12:18:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
y = input("Digite a instalacao: ").upper()
print("Entradas: ",x, "kWh e tipo",y)
if (y == "R"):
	if(x<=500):
		z = x*0.44
		print("Valor total: ",z)
	elif(x>500):
		z= x*0.65
		print("Valor total: ",z)
elif(y == "C"):
	if(x<=1000):
		z = x*0.55
		print("Valor total: ",z)
	elif(x>1000):
		z = x*0.6
		print("Valor total: ",z)
elif(y == "I"):
	if(x<=5000):
		z = x*0.55
		print("Valor total: ",z)
	elif(x>5000):
		z = x*0.6
		print("Valor total: ",z)
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.134177
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo I
Valor total:  -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo R
Valor total:  621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:18:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
y = input("Digite a instalacao: ").upper()
print("Entradas: ",x, "kWh e tipo",y)
if (y == "R"):
	if(x<=500):
		z = x*0.44
		print("Valor total: ",z)
	elif(x>500):
		z= x*0.65
		print("Valor total: ",z)
elif(y == "C"):
	if(x<=1000):
		z = x*0.55
		print("Valor total: ",z)
	elif(x>1000):
		z = x*0.6
		print("Valor total: ",z)
elif(y == "I"):
	if(x<=5000):
		z = x*0.55
		print("Valor total: ",z)
	elif(x>5000):
		z = x*0.6
		print("Valor total: ",z)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Valor total:  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:28:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
y = input("Digite a instalacao: ").upper()
print("Entradas:",x, "kWh e tipo",y)
elif (y == "R")and(x>0):
	if(x<=500):
		z = x*0.44
		print("Valor total: R$",z)
	elif(x>500):
		z= x*0.65
		print("Valor total: R$",z)
elif(y == "C")and(x>0):
	if(x<=1000):
		z = x*0.55
		print("Valor total: R$",z)
	elif(x>1000):
		z = x*0.6
		print("Valor total: R$",z)
elif(y == "I")and(x>0):
	if(x<=5000):
		z = x*0.55
		print("Valor total: R$",z)
	elif(x>5000):
		z = x*0.6
		print("Valor total: R$",z)
else:
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 7
    elif (y == "R")and(x>0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:29:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
y = input("Digite a instalacao: ").upper()
print("Entradas: ",x, "kWh e tipo",y)
if (y == "R")and(x>0):
	if(x<=500):
		z = x*0.44
		print("Valor total: R$",z)
	elif(x>500):
		z= x*0.65
		print("Valor total: R$",z)
elif(y == "C")and(x>0):
	if(x<=1000):
		z = x*0.55
		print("Valor total: R$",z)
	elif(x>1000):
		z = x*0.6
		print("Valor total: R$",z)
elif(y == "I")and(x>0):
	if(x<=5000):
		z = x*0.55
		print("Valor total: R$",z)
	elif(x>5000):
		z = x*0.6
		print("Valor total: R$",z)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 12:30:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
y = input("Digite a instalacao: ").upper()
print("Entradas: ",x, "kWh e tipo",y)
if (y == "R")and(x>0):
	if(x<=500):
		z = x*0.44
		print("Valor total: R$",z)
	elif(x>500):
		z= x*0.65
		print("Valor total: R$",z)
elif(y == "C")and(x>0):
	if(x<=1000):
		z = x*0.55
		print("Valor total: R$",z)
	elif(x>1000):
		z = x*0.6
		print("Valor total: R$",z)
elif(y == "I")and(x>0):
	if(x<=5000):
		z = x*0.55
		print("Valor total: R$",z)
	elif(x>5000):
		z = x*0.6
		print("Valor total: R$",z)
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.192709
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:30:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
y = input("Digite a instalacao: ").upper()
print("Entradas: ",x, "kWh e tipo",y)
if (y == "R")and(x>0):
	if(x<=500):
		z = x*0.44
		print("Valor total: R$",z)
	elif(x>500):
		z= x*0.65
		print("Valor total: R$",z)
elif(y == "C")and(x>0):
	if(x<=1000):
		z = x*0.55
		print("Valor total: R$",z)
	elif(x>1000):
		z = x*0.6
		print("Valor total: R$",z)
elif(y == "I")and(x>0):
	if(x<=5000):
		z = x*0.55
		print("Valor total: R$",z)
	elif(x>5000):
		z = x*0.6
		print("Valor total: R$",z)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:31:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
y = input("Digite a instalacao: ").upper()
print("Entradas: ",x, "kWh e tipo",round(z,2))
if (y == "R")and(x>0):
	if(x<=500):
		z = x*0.44
		print("Valor total: R$",round(z,2))
	elif(x>500):
		z= x*0.65
		print("Valor total: R$",round(z,2))
elif(y == "C")and(x>0):
	if(x<=1000):
		z = x*0.55
		print("Valor total: R$",round(z,2))
	elif(x>1000):
		z = x*0.6
		print("Valor total: R$",round(z,2))
elif(y == "I")and(x>0):
	if(x<=5000):
		z = x*0.55
		print("Valor total: R$",round(z,2))
	elif(x>5000):
		z = x*0.6
		print("Valor total: R$",round(z,2))
else:
	print("Dados invalidos")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print("Entradas: ",x, "kWh e tipo",round(z,2))
NameError: name 'z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:32:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
y = input("Digite a instalacao: ").upper()
print("Entradas: ",x, "kWh e tipo",y)
if (y == "R")and(x>0):
	if(x<=500):
		z = x*0.44
		print("Valor total: R$",round(z,2))
	elif(x>500):
		z= x*0.65
		print("Valor total: R$",round(z,2))
elif(y == "C")and(x>0):
	if(x<=1000):
		z = x*0.55
		print("Valor total: R$",round(z,2))
	elif(x>1000):
		z = x*0.6
		print("Valor total: R$",round(z,2))
elif(y == "I")and(x>0):
	if(x<=5000):
		z = x*0.55
		print("Valor total: R$",round(z,2))
	elif(x>5000):
		z = x*0.6
		print("Valor total: R$",round(z,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 12:32:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo em kWh: "))
y = input("Digite a instalacao: ").upper()
print("Entradas: ",x, "kWh e tipo",y)
if (y == "R")and(x>0):
	if(x<=500):
		z = x*0.44
		print("Valor total: R$",round(z,2))
	elif(x>500):
		z= x*0.65
		print("Valor total: R$",round(z,2))
elif(y == "C")and(x>0):
	if(x<=1000):
		z = x*0.55
		print("Valor total: R$",round(z,2))
	elif(x>1000):
		z = x*0.6
		print("Valor total: R$",round(z,2))
elif(y == "I")and(x>0):
	if(x<=5000):
		z = x*0.55
		print("Valor total: R$",round(z,2))
	elif(x>5000):
		z = x*0.6
		print("Valor total: R$",round(z,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.137609
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
